--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+
+
+@layer base {
+    *, *::after, *::before {
+        font-family: 'Quicksand';
+    }
+
+    button {
+        cursor: pointer;
+    }
+}
