--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,18 +1,63 @@
-@import 'tailwindcss';
-
+@import "tailwindcss";
 
 @layer base {
-    *, *::after, *::before {
-        font-family: 'Poppins';
-    }
+  *,
+  *::after,
+  *::before {
+    font-family: "Poppins";
+    z-index: 1;
+  }
 
-    button {
-        cursor: pointer;
-    }
+  button {
+    cursor: pointer;
+  }
 }
 
 @layer components {
-    .input {
-        @apply p-2 outline outline-neutral-400 hover:outline-neutral-500 focus:outline-neutral-700 mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm;
+  .input {
+    @apply p-2 outline outline-neutral-400 hover:outline-neutral-500 focus:outline-neutral-700 mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm;
+  }
+  .bg-pattern::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: 0;
+    background-color: #e5e5f7;
+    opacity: 0.8;
+    background: radial-gradient(
+        circle,
+        transparent 20%,
+        #e5e5f7 20%,
+        #e5e5f7 80%,
+        transparent 80%,
+        transparent
+      ),
+      radial-gradient(
+          circle,
+          transparent 20%,
+          #e5e5f7 20%,
+          #e5e5f7 80%,
+          transparent 80%,
+          transparent
+        )
+        25px 25px,
+      linear-gradient(#444cf7 2px, transparent 2px) 0 -1px,
+      linear-gradient(90deg, #444cf7 2px, #e5e5f7 2px) -1px 0;
+    background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+  }
+}
+
+@theme {
+  --animate-slide: slide 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @keyframes slide {
+    0% {
+      transform: translateY(-20px);
+      opacity: 0;
     }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 }
