--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,28 +22,10 @@
     position: absolute;
     inset: 0;
     z-index: 0;
-    background-color: #e5e5f7;
-    opacity: 0.8;
-    background: radial-gradient(
-        circle,
-        transparent 20%,
-        #e5e5f7 20%,
-        #e5e5f7 80%,
-        transparent 80%,
-        transparent
-      ),
-      radial-gradient(
-          circle,
-          transparent 20%,
-          #e5e5f7 20%,
-          #e5e5f7 80%,
-          transparent 80%,
-          transparent
-        )
-        25px 25px,
-      linear-gradient(#444cf7 2px, transparent 2px) 0 -1px,
-      linear-gradient(90deg, #444cf7 2px, #e5e5f7 2px) -1px 0;
-    background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
+background-color: #e5e5f7;
+opacity: 0.2;
+background: radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent) 10px 10px, linear-gradient(#023dc4 0.8px, transparent 0.8px) 0 -0.4px, linear-gradient(90deg, #023dc4 0.8px, #e5e5f7 0.8px) -0.4px 0;
+background-size: 20px 20px, 20px 20px, 10px 10px, 10px 10px;
   }
 }
 
